error overflow issue resolved

--- a/src/Components/Error/error.css
+++ b/src/Components/Error/error.css
@@ -3,4 +3,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 40vh;
+}
+.error img{
+    height: 100%;
+    background-color: red; 
 }
